# fastfood

./: .gitignore  DEPLOY_GUIDE.md  Dockerfile  PROJECT_STATUS.md  README.md  railway.json  render.yaml  vercel.json
.github/workflows/: deploy-pages.yml  deploy-railway.yml
backend/: Dockerfile  Makefile  README.md  RENDER_ENV_SETUP.md  TROUBLESHOOTING.md  debug_env.py  env.example  env.render  pyproject.toml  requirements.txt
backend/deploy/: Dockerfile
backend/script/: popular_tb_produtos.py
backend/scripts/database/: init_database.py  test_api_only.py  test_backend.py  test_db_connection.py  test_local_app.py
backend/src/: config.py  main.py
backend/src/adapters/input/api/public/: __init__.py  auth_controller.py  cliente_controller.py  pagamento_controller.py  pedido_controller.py  produto_controller.py
backend/src/adapters/output/repositories/: pedido_repository.py  produto_repository.py
backend/src/domain/models/: produto.py
backend/src/infrastructure/db/: session.py
deploy/: render.yaml  vercel.json
docs/: README.md  arquitetura-kubernetes-fase2.puml
docs/api/: postman-collection.json
docs/deployment/: KUBERNETES_DEPLOY_GUIDE.md
frontend/: README.md  index.html  script.js  styles.css
frontend/assets/css/: styles.css
k8s/: app-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-persistent-volume.yaml  secret.yaml
scripts/: deploy-k8s.sh  deploy.sh  main.sh  setup-env.sh  test-validations.py
scripts/kubernetes/: deploy-k8s.sh
scripts/setup/: setup-env.sh
(+2 files in other folders)
